# kibane

./: Cargo.toml  readme.md
cli/: Cargo.toml
cli/src/: common.rs  lib.rs  main.rs
node/: Cargo.toml
node/src/: common.rs  lib.rs  network.rs  node.rs  p2p.rs  store.rs  swarm.rs  syncer.rs
