[package]
name = "kibane-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kibane"
path = "src/main.rs"

[dependencies]
libp2p.workspace = true
node.workspace = true

clap = { version = "4.4.4", features = ["derive"] }
